# ERC-8004

./: .gitignore
OpenClaw/ClawHub/ERC-800Claw/: SKILL.md  _meta.json
sdk-python/: README.md  pyproject.toml
sdk-python/erc800claw/: __init__.py  cli.py  client.py  contracts.py
sdk-python/tests/: __init__.py  test_client.py  test_contracts.py
sdk-typescript/: README.md  cli.js  client.js  contracts.js  index.d.ts  index.js  package-lock.json  package.json
sdk-typescript/tests/: client.test.js  contracts.test.js
